[package]
name = "sleep"
version = "0.1.0"
authors = ["Daiki Sakuma <daikisakuma6040@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
session_types = { git = "https://github.com/Munksgaard/session-types.git" }